--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>DevFolio Bootstrap Portfolio Template - Index</title>
+  <title>Falone Portfolio - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -37,7 +37,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">DevFolio</a></h1>
+      <h1 class="logo"><a href="index.html">FaloneYessi</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -81,7 +81,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">Je suis FALONE YESSI</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Graphiste, Community manager,Développeuse,Prothésiste "></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Graphiste designer, Community manager,Développeuse front-end"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -141,14 +141,14 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Salut, je suis Falone Yessi née le 28 /07/1999 Après mon baccalauréat en 2018 au lycée Charles Mefane de Lambaréné, j'ai entamé des études à l'université Omar Bongo. Après quelques années en L2, j'ai choisi de quitter la faculté pour me consacrer à l'entrepreneuriat
+                      Salut, je suis Falone Yessi née le 28 /07/1999 à lambarènè.Après l'obtention de mon baccalauréat en 2018 au lycée Charles Mefane de Lambaréné, j'ai entamé des études à l'université Omar Bongo. Après quelques années en L2, j'ai choisi de quitter la faculté pour me consacrer à l'entrepreneuriat
                     </p>
                     <p class="lead">
                       Formation
                       Pour me lancer dans l'entrepreunariat,il fallait bien commencer quelques parts et j'ai décidé de me former dans en onglerie moderne parceque j'étais 
                     </p>
                     <p class="lead">
-                      Le numérique a toujours été ma passion, et aujourd'hui, il est essentiel pour réussir dans l'entrepreneuriat. C'est pourquoi je suis actuellement en formation à l'École 241 pour devenir une référente digitale pour l'année 2023-2024. Cette formation est un atout précieux qui me permettra de mieux gérer mes entreprises avec une visibilité accrue Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
+                      Le numérique a toujours été ma passion, et aujourd'hui, il est essentiel pour réussir dans l'entrepreneuriat. C'est pourquoi je suis actuellement en formation à l'École 241 pour devenir une référente digitale pour l'année 2023-2024. Cette formation est un atout précieux qui me permettra de mieux gérer mes entreprises avec une visibilité accrue.
                     
                       .
                     </p>
@@ -272,7 +272,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Counter Section ======= -->
-    <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/counters-bg.jpg)">
+    <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/hero-bg.jpg)">
       <div class="overlay-mf"></div>
       <div class="container position-relative">
         <div class="row">
@@ -447,7 +447,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Imitation</h2>
+                    <h2 class="w-title">Affiche 5colos</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Graphiste Designer</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
@@ -503,7 +503,7 @@
                 <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
-                      <img src="assets/img/testimonial-2.jpg" alt="" class="rounded-circle b-shadow-a">
+                      <img src="assets/img/testimonial-3.jpg" alt="" class="rounded-circle b-shadow-a">
                       <span class="author"> Nadège Balemba</span>
                     </div>
                     <div class="content-test">
@@ -749,7 +749,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
+            <p class="copyright">&copy; Copyright <strong>FaloneYessi</strong>. All Rights Reserved</p>
             <div class="credits">
               <!--
               All the links in the footer should remain intact.
