--- a/index.html
+++ b/index.html
@@ -153,14 +153,15 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Salut, je suis Falone Yessi née le 28 /07/1999 à lambarènè.Après l'obtention de mon baccalauréat en 2018 au lycée Charles Mefane de Lambaréné, j'ai entamé des études à l'université Omar Bongo. Après quelques années en L2, j'ai choisi de quitter la faculté pour me consacrer à l'entrepreneuriat
+                      Salut, je suis Falone Yessi née le 28/07 à lambarènè.Après l'obtention de mon baccalauréat en 2018 au lycée Charles Mefane de Lambaréné, j'ai entamé des études de Droit  à l'université Omar Bongo. Après triple redoublement en L2, j'ai décidé  de quitter la faculté pour me consacrer à l'entrepreneuriat
                     </p>
                     <p class="lead">
                       Formation
-                      Pour me lancer dans l'entrepreunariat,il fallait bien commencer quelques parts et j'ai décidé de me former dans en onglerie moderne parceque j'étais 
+                      Pour me lancer dans l'entrepreunariat,il fallait bien commencer quelques parts et j'ai décidé de me former dans en onglerie moderne parceque ça toujours étè depuis ma tendre enfance 
+                      une passion pour moi 
                     </p>
                     <p class="lead">
-                      Le numérique a toujours été ma passion, et aujourd'hui, il est essentiel pour réussir dans l'entrepreneuriat. C'est pourquoi je suis actuellement en formation à l'École 241 pour devenir une référente digitale pour l'année 2023-2024. Cette formation est un atout précieux qui me permettra de mieux gérer mes entreprises avec une visibilité accrue.
+                      Le numérique est le canal incontournable  par lequel tout entrepreneur du 21ème siécle devrait maîtriser pour avoir du succès dans ses entreprises.C'est pourquoi j'ai décidé de me former au métier de réfèrent digital. Actuellement en formation à l'Ecole 241 pour le compte de l'année  2023-2024 promo 5.
                     
                       .
                     </p>
@@ -328,7 +329,7 @@
               </div>
               <div class="counter-num">
                 <p data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="counter purecounter"></p>
-                <span class="counter-text">TROPHÉ</span>
+                <span class="counter-text">TROPHÉS</span>
               </div>
             </div>
           </div>
