--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Falone Portfolio - Index</title>
+  <title>Missdigital241- Portfolio - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -30,7 +30,7 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: DevFolio
+  * Template Name: missdigital241
   * Updated: Sep 18 2023 with Bootstrap v5.3.2
   * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
   * Author: BootstrapMade.com
@@ -49,7 +49,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">FaloneYessi</a></h1>
+      <h1 class="logo"><a href="index.html">Missdigital241</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -770,7 +770,7 @@
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
             -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              <!--  Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
             </div>
           </div>
         </div>
