some modifications done

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -118,10 +118,10 @@
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Name: </span> <span>BABONGUI MOUDOUHY Falone Yessi</span></p>
-                        <p><span class="title-s">Profil: </span> <span>Réfèrente digitale</span></p>
+                        <p><span class="title-s">Nom: </span> <span>BABONGUI MOUDOUHY Falone Yessi</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Réfèrente digitale</span></p>
                         <p><span class="title-s">Email: </span> <span>babonguifalone@gmail.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>(241) 77739097</span></p>
+                        <p><span class="title-s">Contact: </span> <span>(241) 77739097</span></p>
                       </div>
                     </div>
                   </div>
@@ -135,7 +135,7 @@
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>HTML</span> <span class="pull-right">50%</span>
+                    <span>HTML & CSS </span> <span class="pull-right">50%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -184,7 +184,7 @@
                 Services
               </h3>
               <p class="subtitle-a">
-                Voiçi les services que je propose en tant que réfèrente digitale.
+                Voici les services que je propose en tant que réfèrente digitale.
               </p>
               <div class="line-mf"></div>
             </div>
@@ -197,7 +197,7 @@
                 <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Community manager </h2>
+                <h2 class="s-title">Community Manager </h2>
                 <p class="s-description text-center">
                   CM,j'assure la gestion de vos réseaux sociaux et les interéactions de votre clientèle.
                   Qui est un facteur important pour maintenir votre clientèle
@@ -212,7 +212,7 @@
                 <span class="ico-circle"><i class="bi bi-card-checklist"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title"> Social média manager</h2>
+                <h2 class="s-title"> Social Média Manager</h2>
                 <p class="s-description text-center">
                   Je définis des stratégies ciblés et efficaces. 
                   Pour renforcer le positionnement de la 
@@ -241,7 +241,7 @@
                 <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Web designer</h2>
+                <h2 class="s-title">Web Designer</h2>
                 <p class="s-description text-center">
                   J'offre des services de conception de site web, d'optimisation de ,
                   l'expérience utilisateur, de création d'interfaces attrayantes
