ajout bouton modification de texte

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -49,7 +49,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Missdigital241</a></h1>
+      <h1 class="logo"><a href="index.html">Falone Yessi BM</a></h1>
 
 
       <nav id="navbar" class="navbar">
@@ -85,20 +85,37 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
+  <!--
 
-  <div id="hero" class="hero route bg-image">
-    <div class="overlay-itro"></div>
-    <div class="hero-content display-table">
-      <div class="table-cell">
-        <div class="container">
-          <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="hero-title mb-4">Je suis FALONE YESSI</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Graphiste designer, Community manager,Développeuse front-end"></span></p>
-          <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
+      <div id="hero" class="hero route bg-image">
+        <div class="overlay-itro"></div>
+        <div class="hero-content display-table">
+          <div class="table-cell">
+            <div class="container">
+              <p class="display-6 color-d">Hello, world!</p>
+              <h1 class="hero-title mb-4">Je suis FALONE YESSI</h1>
+              <p class="hero-subtitle"><span class="typed" data-typed-items="Graphiste designer, Community manager,Développeuse front-end"></span></p>
+              <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    -->
+
+    <div id="hero" class="hero route bg-image">
+      <div class="overlay-itro"></div>
+      <div class="hero-content display-table">
+        <div class="table-cell">
+          <div class="container">
+            <p class="display-6 color-d">Salut!</p>
+            <h1 class="hero-title mb-4">Je suis FALONE YESSI</h1>
+            <p class="hero-subtitle"><span class="typed" data-typed-items="Graphiste Designer, Community Manager,Développeuse Front-End"></span></p>
+            <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="https://mega.nz/file/gu8gzCaL#3OpVQtI59_o3WamYJMSN9qHqSc6QoGrHIJ8C05UWtLE" target="_blank" role="button">Voir mon CV</a></p>
+          </div>
         </div>
       </div>
     </div>
-  </div><!-- End Hero Section -->
+  <!-- End Hero Section -->
 
   <main id="main">
 
@@ -119,7 +136,7 @@
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Nom: </span> <span>BABONGUI MOUDOUHY Falone Yessi</span></p>
-                        <p><span class="title-s">Profile: </span> <span>Réfèrente digitale</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Consultante digitale</span></p>
                         <p><span class="title-s">Email: </span> <span>babonguifalone@gmail.com</span></p>
                         <p><span class="title-s">Contact: </span> <span>(241) 77739097</span></p>
                       </div>
@@ -127,7 +144,7 @@
                   </div>
                   <div class="skill-mf">
                     <p class="title-s">Skill</p>
-                    <span>CANVA</span> <span class="pull-right">85%</span>
+                    <span> </span> <span class="pull-right">85%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
@@ -135,13 +152,13 @@
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>HTML & CSS </span> <span class="pull-right">50%</span>
+                    <span>WORDPRESS </span> <span class="pull-right">50%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                    <span>ONGLERIE MODERNE</span> <span class="pull-right">90%</span>
+                    <span>PHOTOSHOP</span> <span class="pull-right">40%</span>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                      <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                   </div>
                 </div>
@@ -153,17 +170,14 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Salut, je suis Falone Yessi née le 28/07 à lambarènè.Après l'obtention de mon baccalauréat en 2018 au lycée Charles Mefane de Lambaréné, j'ai entamé des études de Droit  à l'université Omar Bongo. Après triple redoublement en L2, j'ai décidé  de quitter la faculté pour me consacrer à l'entrepreneuriat
+                      Consultante digitale dévouée et passionnée. Mon objectif est d'accompagner les entreprises dans leur transformation digitale avec humilité, audace et professionnalisme.
                     </p>
                     <p class="lead">
-                      Formation
-                      Pour me lancer dans l'entrepreunariat,il fallait bien commencer quelques parts et j'ai décidé de me former dans en onglerie moderne parceque ça toujours étè depuis ma tendre enfance 
-                      une passion pour moi 
+                      Je m'efforce constamment de comprendre les besoins spécifiques de mes clients afin de leur offrir des solutions sur mesure. Mon adaptabilité me permet de relever tous les défis avec confiance et de mener à bien chaque projet.
                     </p>
                     <p class="lead">
-                      Le numérique est le canal incontournable  par lequel tout entrepreneur du 21ème siécle devrait maîtriser pour avoir du succès dans ses entreprises.C'est pourquoi j'ai décidé de me former au métier de réfèrent digital. Actuellement en formation à l'Ecole 241 pour le compte de l'année  2023-2024 promo 5.
-                    
-                      .
+                      Grâce à mon approche axée sur le client et à mon expertise dans le domaine de la transformation digitale des entreprises, je suis convaincue de pouvoir apporter une réelle valeur ajoutée à chaque collaboration.
+
                     </p>
                   </div>
                 </div>
@@ -181,11 +195,8 @@
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                Services
+               Mes services
               </h3>
-              <p class="subtitle-a">
-                Voici les services que je propose en tant que réfèrente digitale.
-              </p>
               <div class="line-mf"></div>
             </div>
           </div>
@@ -271,9 +282,9 @@
                 <span class="ico-circle"><i class="bi bi-calendar4-week"></i></span>
               </div>
               <div class="service-content">
-                <h2 class="s-title">Consulting numérique </h2>
+                <h  2 class="s-title">Consulting </h2>
                 <p class="s-description text-center">
-                  J'analyse les données et conseille les entreprises  afin de définir 
+                  J'analyse et conseille les entreprises  afin de définir 
                   des stratégies numériques efficaces pour atteindre leurs objectifs et 
                   améliorer leur présence en ligne.
                 </p>
@@ -346,9 +357,10 @@
               <h3 class="title-a">
                 Mes réalisations
               </h3>
-              <p class="subtitle-a">
+             <!-- <p class="subtitle-a">
                 Mes quelques travaux sur lequels j'ai travaillé.
               </p>
+               -->  
               <div class="line-mf"></div>
             </div>
           </div>
@@ -374,7 +386,7 @@
                       <a href="portfolio-details.html"> <span class="bi bi-plus-circle"></span></a>
                     </div>
                   </div>
-                </div>sssss
+                </div>
               </div>
             </div>
           </div>
@@ -504,7 +516,7 @@
     </section><!-- End Portfolio Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/overlay-bg.jpg)">
+    <div class="testimonials paralax-mf bg-image"  style="background-image: url(assets/img/overlay-bg.jpg)">
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
